# pitspy

./: LICENSE  pitspy-cli.py  pyproject.toml
pitspy/: core.py  types.py
pitspy/converters/: elm.py  ts.py
pitspy/pitspy/: cli.py  core.py  utils.py
pitspy/pitspy/converters/: ts.py
tests/: test_pitspy.py  test_ts.py
tests/moda/: a.pits  a.py
