[tool.poetry]
name = "pitspy"
version = "0.1.0"
description = ""
authors = ["Matthew Dennis <matt@hurdle.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyhumps = "^3.8.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
